Index modified with home content

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sin tutlo para Comida</title>
+    <title>Foodzy | Dale una segunda oportunidad a la comida</title>
 
     <!--Import stylesheet-->
     <link rel="stylesheet" href="style.css">
@@ -19,19 +19,59 @@
 </head>
 <body>
     <!--Header section-->
-    <header class="header">
-        <nav class="navbar">
-                <a href="#Home">Home</a>
-                <a href="#Services">Services</a>
-                <a href="#" class="logo"></a>
-                <a href="#About Us">About Us</a>
+        <header class="header">
+            <div class="logo">
+                <img src="assets\logo.png" alt="logo">
+            </div>
 
-                <button>
-                    <box-icon class="cart" type='solid' name='cart'></box-icon>
-                    <span>Store</span>
-                </button>
-        </nav>
-    </header>
+            <nav class="navbar">                
+                    <ul>
+                        <li><a href="#Home">Inicio</a></li>
+                        <li><a href="#About Us">Sobre Nosotros</a></li>
+                        <li><a href="#Services">Servicios</a></li>
+                        <li><a href="#Contanct">Encuentranos</a></li>
+                       
+                    </ul>
+            </nav>
+
+            <button class="btn">
+                <p>Zy-store</p>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgb(255, 255, 255);"><path d="M21 4H2v2h2.3l3.28 9a3 3 0 0 0 2.82 2H19v-2h-8.6a1 1 0 0 1-.94-.66L9 13h9.28a2 2 0 0 0 1.92-1.45L22 5.27A1 1 0 0 0 21.27 4 .84.84 0 0 0 21 4zm-2.75 7h-10L6.43 6h13.24z"></path><circle cx="10.5" cy="19.5" r="1.5"></circle><circle cx="16.5" cy="19.5" r="1.5"></circle></svg>
+            </button>
+        </header>
+
+    <!--Body web section-->
+    <section class="home" id="home">
+        <div class="home-content">
+            <h3>Experimenta un nuevo mercado con</h3>
+            <h1>Foodzy</h1>
+            <h2>El placer de comer con <span class="multi"></span>ahorro</h2>
+            <p>Aprovecha nuestras ofertas y conoce al nuevo mercado hard disccount de productos a punto de caducar,
+                con increibles descuentos y seguridad, para tu cuerpo y tu economía.</p>
+        </div>
+
+        <div class="home-img">
+            <div class="card">
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="card-inner">
+                    <img src="assets/expo.png" alt="img1" class="img1">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="about">
+
+    </section>
+
+    <section class="services">
+
+    </section>
+
+    <section class="contact">
+
+    </section>
 
 
     <!---Scripts Load-->
