--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <img src="assets\mujer-tableta-comprobando-carrito-compras-ver-si-tiene-todo-lo-que-necesita-almuerzo.jpg" alt="img-card1">
                 <div class="card__content">
                 <p class="card__title">¿Qué es Foodzy?</p>
-                    <p class="card__description">Foodzy nace como un negocio que busca innovar el mercado ecuatoriano, ofreciendo productos de calidad que posean fechas delimitadas a su punto de caducidad, presentando 
+                    <p class="card__description1">Foodzy nace como un negocio que busca innovar el mercado ecuatoriano, ofreciendo productos de calidad que posean fechas delimitadas a su punto de caducidad, presentando 
                         descuentos y ofertas para sus potenciales clientes. Los consumibles ofrecidos se entregan con hojas de seguridad y lineamientos, de seguridad y salud, para su consumo habitual.
                     </p>
                 </div>
@@ -86,7 +86,11 @@
                 <img src="assets\lay-flat-manojo-provisiones-frescas-donacion.jpg" alt="img-card2">
                 <div class="card__content">
                 <p class="card__title">Objetivos</p>
-                <p class="card__description"></p>
+                    <ul>
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas sequi quisquam cupiditate, fugit eius iure molestiae ducimus doloribus quam obcaecati eligendi ipsa fuga ex libero recusandae cum veniam ad tempora?</li>
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur fugiat a at dicta velit quidem qui odit aliquid cupiditate. Doloribus, quas vel! Natus, fuga laboriosam delectus sit fugit reprehenderit accusantium.</li>
+                        <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias, temporibus assumenda natus quaerat tempora minima magnam esse! Mollitia sit sunt possimus! Atque ullam soluta veniam magni maiores quo cum. Deserunt?</li>
+                    </ul>
                 </div>
             </div>
         </section>
