--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <!--Servicios-->
         <section class="services" id="services">
             <div class="services-title">
-                <h2>Nuestros Servicios</h2>
+                <h2>Nuestros Productos</h2>
             </div>
             <!--Services cards-->
              <div class="products">
